<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.vinacovre.myapplication.AboutActivity"
    tools:showIn="@layout/activity_about">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/about_icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_width="4dp"
        app:civ_border_color="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/about_title"
        android:textSize="33dp"
        android:textStyle="bold"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="45dp"
        android:layout_alignBottom="@+id/about_icon"
        android:layout_toEndOf="@+id/about_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_content"
        android:id="@+id/about_content"
        android:layout_below="@+id/about_icon"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about_authors"
        android:id="@+id/about_authors"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_below="@+id/about_content"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about_link_git"
        android:textColorLink="@color/colorPrimaryDark"
        android:id="@+id/about_link_git"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_below="@+id/about_authors"
        android:layout_alignParentStart="true"
        android:linksClickable="true"
        android:nestedScrollingEnabled="false" />


</RelativeLayout>
