<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_below="@+id/space1"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:src="@mipmap/profile"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="4dp" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space2"
        android:layout_centerHorizontal="true"
        android:text="Vinicius Covre de Assis"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="23dp" />

    <Space
        android:id="@+id/space1"
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Space
        android:id="@+id/space2"
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true" />

    <Space
        android:id="@+id/space3"
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_below="@+id/profile_name"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space3"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:src="@mipmap/medal_gold" />

        <ImageView
            android:id="@+id/comapre_now_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/medal_silver" />

        <ImageView
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/medal_bronze" />
    </LinearLayout>

    <TextView
        android:id="@+id/number_medal_gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginEnd="0dp"
        android:layout_toStartOf="@+id/profile_name"
        android:text="5"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/number_medal_silver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:text="2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/number_medal_bronze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="7"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/linearLayout"
        android:layout_toEndOf="@+id/profile_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_bio_title"
        android:textSize="18dp"
        android:textAlignment="center"
        android:id="@+id/profile_bio_title"
        android:layout_below="@+id/underscore"
        android:textColor="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />  

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/profile_bio_content"
        android:id="@+id/profile_bio_content"
        android:layout_marginLeft="15dp"
        android:textAlignment="center"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/profile_bio_title"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/underscore"
        android:id="@+id/underscore"
        android:layout_below="@+id/number_medal_gold"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profile_facebook_title"
        android:textSize="18dp"
        android:textAlignment="center"
        android:id="@+id/profile_facebook_title"
        android:layout_below="@+id/profile_bio_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/profile_facebook_content"
        android:textColorLink="@color/colorPrimaryDark"
        android:id="@+id/profile_facebook_content"
        android:layout_below="@+id/profile_facebook_title"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
