<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.vinacovre.myapplication.ContactActivity"
    tools:showIn="@layout/activity_contact">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/contact_chris"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentLeft="true"
        android:src="@mipmap/chris"
        app:civ_border_width="4dp"
        app:civ_border_color="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true" />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/contact_mike"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@mipmap/mike"
        android:layout_marginTop="20dp"
        app:civ_border_width="4dp"
        app:civ_border_color="@color/colorPrimaryDark"
        android:layout_below="@+id/contact_chris"
        android:layout_alignParentStart="true" />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/contact_ryan"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@mipmap/ryan"
        android:layout_marginTop="20dp"
        app:civ_border_width="4dp"
        app:civ_border_color="@color/colorPrimaryDark"
        android:layout_below="@+id/contact_mike"
        android:layout_alignParentStart="true" />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/contact_vini"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/vini"
        app:civ_border_width="4dp"
        app:civ_border_color="@color/colorPrimaryDark"
        android:layout_below="@+id/contact_ryan"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/contact_link_fb_vini"
        android:textColorLink="@color/colorPrimaryDark"
        android:id="@+id/contact_link_fb_vini"
        android:textAlignment="center"
        android:linksClickable="true"
        android:nestedScrollingEnabled="false"
        android:layout_alignBottom="@+id/contact_vini"
        android:layout_alignStart="@+id/contact_email_vini" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/contact_link_fb_ryan"
        android:textColorLink="@color/colorPrimaryDark"
        android:id="@+id/contact_link_fb_ryan"
        android:textAlignment="center"
        android:linksClickable="true"
        android:nestedScrollingEnabled="false"
        android:layout_alignBottom="@+id/contact_ryan"
        android:layout_alignStart="@+id/contact_link_fb_mike" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/contact_link_fb_mike"
        android:textColorLink="@color/colorPrimaryDark"
        android:id="@+id/contact_link_fb_mike"
        android:textAlignment="center"
        android:linksClickable="true"
        android:nestedScrollingEnabled="false"
        android:layout_alignBottom="@+id/contact_mike"
        android:layout_alignStart="@+id/contact_email_mike" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/contact_link_fb_chris"
        android:textColorLink="@color/colorPrimaryDark"
        android:id="@+id/contact_link_fb_chris"
        android:textAlignment="center"
        android:linksClickable="true"
        android:nestedScrollingEnabled="false"
        android:layout_alignBottom="@+id/contact_chris"
        android:layout_alignStart="@+id/contact_email_chris" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="christian.obrien@hotmail.com"
        android:id="@+id/contact_email_chris"
        android:autoLink="email"
        android:textColorLink="@color/colorPrimaryDark"
        android:layout_alignWithParentIfMissing="false"
        android:layout_marginLeft="35dp"
        android:layout_above="@+id/contact_link_fb_chris"
        android:layout_toEndOf="@+id/contact_chris"
        android:layout_marginStart="36dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="mr33701n@pace.edu"
        android:id="@+id/contact_email_mike"
        android:autoLink="email"
        android:textColorLink="@color/colorPrimaryDark"
        android:layout_above="@+id/contact_link_fb_mike"
        android:layout_alignStart="@+id/contact_email_chris" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ryan.faranda3@gmail.com"
        android:id="@+id/contact_email_ryan"
        android:autoLink="email"
        android:textColorLink="@color/colorPrimaryDark"
        android:layout_above="@+id/contact_link_fb_ryan"
        android:layout_alignStart="@+id/contact_email_mike" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="viniassis@me.com"
        android:autoLink="email"
        android:id="@+id/contact_email_vini"
        android:textColorLink="@color/colorPrimaryDark"
        android:layout_above="@+id/contact_link_fb_vini"
        android:layout_alignStart="@+id/contact_email_ryan" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Christian O&apos; Brien"
        android:layout_marginBottom="10dp"
        android:id="@+id/contact_name_chris"
        android:layout_above="@+id/contact_email_chris"
        android:layout_alignStart="@+id/contact_email_chris" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Michael Rodriguez"
        android:layout_marginBottom="10dp"
        android:id="@+id/contact_name_mike"
        android:layout_above="@+id/contact_email_mike"
        android:layout_alignStart="@+id/contact_email_mike" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Ryan Faranda"
        android:layout_marginBottom="10dp"
        android:id="@+id/contact_name_ryan"
        android:layout_above="@+id/contact_email_ryan"
        android:layout_alignStart="@+id/contact_email_ryan" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Vinicius Covre"
        android:layout_marginBottom="10dp"
        android:id="@+id/contact_name_vini"
        android:layout_above="@+id/contact_email_vini"
        android:layout_alignStart="@+id/contact_email_vini" />

</RelativeLayout>
